--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
-    <div id="plugin"></div>
+    <div id="plugin" owner-id="650b058db9cf6c04a6fe6c10"></div>
     <script src="http://localhost:5000/index.js"></script>
 </body>
 </html>
